--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 
 :root {
-  --color-primary: #4d41c0;
+  --color-bg-primary: #4d41c0;
+  --color-bg-secondary: #e8e8e8;
+  --color-text-primary: #fff;
 }
 
 * {
@@ -11,7 +13,7 @@
 
 html,
 body {
-  background-color: #e8e8e8;
+  background-color: var(--color-bg-secondary);
 }
 
 a,
